--- a/styles.css
+++ b/styles.css
@@ -257,8 +257,24 @@
 
 @media screen and (max-width: 375px) {
 
+    .page-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        padding-bottom: 100px;
+    }
+
     .title {
         font-size: 26px;
+    }
+
+    .left-side {
+        margin-right: 0px;
+        margin-top: 100px;
+        margin-bottom: 60px;
+        max-width: 75vw;
     }
 
     .quote {
