--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,6 @@
     background-color: #FFFFFF;
 }
 
-.calc-container {
-    position: relative;
-}
-
 .calc-result-wrapper {
     height: 600px;
     width: 80%;
@@ -251,6 +247,7 @@
         margin-right: 0px;
         margin-top: 100px;
         margin-bottom: 60px;
+        max-width: 75vw;
     }
 
 }
