--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     border: 0.1px solid #ececec;
     border-radius: 30px;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     box-shadow: 2px 4px 10px rgb(51, 51, 51, 0.2);
     background-color: #FFFFFF;
 }
@@ -271,7 +271,7 @@
         margin-right: 0px;
         margin-top: 100px;
         margin-bottom: 60px;
-        max-width: 75vw;
+        max-width: 85vw;
     }
 
     .quote {
