--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 }
 
 .calc-result-wrapper {
-    height: 600px;
+    max-height: 300px;
     width: 80%;
     padding-top: 20px;
     display: flex;
@@ -247,7 +247,21 @@
         margin-right: 0px;
         margin-top: 100px;
         margin-bottom: 60px;
-        max-width: 75vw;
+        max-width: 85vw;
+    }
+
+    .calc-wrapper {
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .calc-result-wrapper {
+        width: 80%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
     }
 
 }
