--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,21 @@
 
 .calc-wrapper {
     width: 300px;
-    height: 525px;
+    height: auto;
     position: relative;
     padding-bottom: 5px;
     display: flex;
     border: 0.1px solid #ececec;
     border-radius: 30px;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     box-shadow: 2px 4px 10px rgb(51, 51, 51, 0.2);
     background-color: #FFFFFF;
 }
 
 .calc-result-wrapper {
-    max-height: 300px;
+    min-height: 125px;
+    max-height: 125px;
     width: 80%;
     padding-top: 20px;
     display: flex;
@@ -259,6 +260,8 @@
 
     .calc-result-wrapper {
         width: 80%;
+        min-height: 125px;
+        max-height: 125px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
