--- a/styles.css
+++ b/styles.css
@@ -260,8 +260,9 @@
 
     .calc-result-wrapper {
         width: 80%;
-        min-height: 125px;
-        max-height: 125px;
+        min-height: 160px;
+        max-height: 160px;
+        height: 160px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
