--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,12 @@
         padding-bottom: 100px;
     }
 
+    .calc-result-wrapper {
+        min-height: 160px;
+        max-height: 160px;
+        height: 160px;
+    }
+
     .title {
         font-size: 26px;
     }
